# metrics-as-scores

./: .coveragerc  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README.qmd  build.py  demo.webm  genindex.html  index.html  main.py  metrics-as-scores.service  metrics_as_scores.cli.html  metrics_as_scores.data.html  metrics_as_scores.distribution.html  metrics_as_scores.html  metrics_as_scores.tools.html  metrics_as_scores.webapp.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.md  readme_link.html  refs.bib  requirements.txt  search.html  searchindex.js  sliders.py  zenodo.eps
.github/workflows/: build-doc.yml  codecov.yml  draft-pdf.yml  static.yml
_modules/: index.html
_modules/metrics_as_scores/cli/: BundleOwn.html  Cli.html  CreateDataset.html  Download.html  FitParametric.html  KnownDatasets.html  (+6 more)
_sources/: metrics_as_scores.distribution.rst.txt  modules.rst.txt
csv/: metrics.csv.7z  readme.md
datasets/: .gitkeep  known-datasets.json
datasets/_default/: About.qmd  _quarto.yml  refs.bib
docs/: .gitignore  conf.py  index.rst  metrics_as_scores.cli.rst  metrics_as_scores.data.rst  metrics_as_scores.rst  metrics_as_scores.webapp.rst
files/: MetricID.csv  metrics-discrete.csv  metrics-ideal.csv  readme.md  systems-domains.csv
notebooks/: Example-create-own-dataset.ipynb  Example-webapp-qcc.ipynb
paper/: build.cmd  paper.md  refs.bib
results/: anova.csv  are_uniform.rds  ks2samp.csv  transform_CA.rds  transform_NOP.rds  transform_TLOC.rds  transform_VG.rds  tukey.csv
src/data/: __init__.py  metrics.py  pregenerate.py  pregenerate_distns.py  pregenerate_fit.py
src/distribution/: distribution.py  fitting.py  fitting_problems.py
src/metrics_as_scores/: __init__.py  __version__.py
src/tools/: funcs.py  lazy.py
src/webapp/: app_hooks.py  data.py  exception.py  footer.html  header.html  main.py  scoring.py
test/: base.py  test_fitting.py  test_metrics.py
test/cli/: test_helpers.py
test/data/: elisa-manifest.json  elisa-org-data.csv  mdhaber-manifest.json  mdhaber-org-data.csv  qcc-manifest.json  test_Dataset.py  test_pregenerate.py  test_pregenerate_distns.py  test_pregenerate_fit.py
test/distribution/: test_distribution.py  test_fitting.py  test_fitting_problems.py
test/tools/: test_funcs.py  test_lazy.py
(+88 files in other folders)
